--- a/vignettes/qpcr_analysis.Rmd
+++ b/vignettes/qpcr_analysis.Rmd
@@ -445,7 +445,8 @@ res <- pcr_assess(ct3,
                   amount = amount,
                   reference_gene = 'GAPDH',
                   method = 'efficiency')
-knitr::kable(res, caption = '\\label{table:table7} Amplificaion efficiency of c-myc')
+knitr::kable(res, 
+             caption = '\\label{table:table7} Amplificaion efficiency of c-myc')
 ```
 
 The output of `pcr_assess` is a `data.frame` of 4 columns and *n* rows equals the input genes except for the reference. For each gene an *intercept*, *slope* and $R^2$ is calculated for a the difference between it and the reference ($\Delta C_T$) (Table \ref{table:table7}). 
@@ -475,7 +476,8 @@ To caclulate the standard curve for individual genes, `pcr_assess` takes a `data
 res <- pcr_assess(ct3,
                   amount = amount,
                   method = 'standard_curve')
-knitr::kable(res, caption = '\\label{table:table8}Standard curves of c-myc and GAPDH')
+knitr::kable(res, 
+             caption = '\\label{table:table8}Standard curves of c-myc and GAPDH')
 ```
 
 The output put is similar to the previous call, except when 'standard_curve' is passed to `method` curves are calculated for individual genes, column `gene` (Table \ref{table:table8}). 
@@ -524,12 +526,13 @@ res1 <- pcr_analyze(ct1,
   reference_gene = 'GAPDH',
   reference_group = 'brain')
 
-knitr::kable(res1, caption = '\\label{table:table9} Double delta $C_T$ method (separate tubes)')
+knitr::kable(res1,
+             caption = '\\label{table:table9} Double delta $C_T$ method (separate tubes)')
 ```
 
-The output of `pcr_analyze` is 8 columns; contains the calculatations of each gene in each group and the error terms (Table \ref{table:table8}). This analysis uses the default `mode`, 'separate_tube' as the input dataset came for an experiment where the target `r names(ct1)[1]` and the control gene `r names(ct1)[2]` were ran in separate tubes.  
+The output of `pcr_analyze` is 8 columns; contains the calculatations of each gene in each group and the error terms (Table \ref{table:table9}). This analysis uses the default `mode`, 'separate_tube' as the input dataset came for an experiment where the target `r names(ct1)[1]` and the control gene `r names(ct1)[2]` were ran in separate tubes.  
 
-In contrast, the `ct2` dataset, also shown in Table \ref{table2}, came from an identical experment except the samples were run in the same tube. So the followin analysis invokes a different `mode`, 'same_tube'.  
+In contrast, the `ct2` dataset, also shown in Table \ref{table3}, came from an identical experment except the samples were run in the same tube. So the followin analysis invokes a different `mode`, 'same_tube'.  
 
 ```{r ddct_same_tube}
 # calculate all values and errors in one step
@@ -618,7 +621,7 @@ ggplot(res, aes(x = group, y = fold_change, group = gene, fill = gene)) +
 
 The calculation of the standard curve method involves to steps as explained earlier. First, a standard curve is calculted for each gene to find the *intercept* and the *slope*. Then the relative expression is calculated.  
 
-To apply this method to the `ct1` dataset (Table \ref{table3}). We used the variables `slope` and `intercept` that were calculated earlier using the `ct3` dataset (Table \ref{table:table8}).  
+To apply this method to the `ct1` dataset (Table \ref{table2}). We used the variables `slope` and `intercept` that were calculated earlier using the `ct3` dataset (Table \ref{table:table8}).  
 
 ```{r standard_separate_tube}
 ## calculate standard amounts and error
@@ -630,7 +633,8 @@ res1 <- pcr_analyze(ct1,
                    slope = slope,
                    method = 'relative_curve')
 
-knitr::kable(res1, caption = '\\label{table:table12}Standard curve method (separate tubes)')
+knitr::kable(res1, 
+             caption = '\\label{table:table12} Standard curve method (separate tubes)')
 ```
 
 The output of `pcr_analyze` is the same as explained before. The calculated averages and error term of target genes in each group relative to the reference gene and gourp (Table \ref{table:table12}).   
@@ -648,10 +652,11 @@ res2 <- pcr_analyze(ct2,
                    method = 'relative_curve',
                    mode = 'same_tube')
 
-knitr::kable(res2, caption = 'Standard curve method (same tube)')
+knitr::kable(res2, 
+             caption = '\\label{table:table13} Standard curve method (same tube)')
 ```
 
-The output is similar to that descriped earlier (Table \ref{table:table12}).  
+The output is similar to that descriped earlier (Table \ref{table:table13}).  
 
 Figure \ref{fig:fig5} shows the output of the standrd curve method. Relative expression values of c-myc in the kideny normalized by GAPDH and calibrated to the brain are shown as bars, Averages $\pm$ standard deviations.  
 
@@ -718,7 +723,8 @@ tst1 <- pcr_test(ct4,
          reference_group = 'control',
          test = 't.test')
 
-knitr::kable(tst1, caption = '\\label{table:table14} t-test summary')
+knitr::kable(tst1,
+             caption = '\\label{table:table14} t-test summary')
 ```
 
 When the argument `test` is set to 't.test' a simple two-group *t*-test is carried out and an `estimate` for the differnce between groups for the change in the target relative to a control gene is provided. In addtion, a `p_vale`, a `lower` and `upper` 95% confidence intervals are provided as well (Table \ref{table:table14}).  
@@ -731,7 +737,8 @@ tst2 <- pcr_test(ct4,
          reference_group = 'control',
          test = 'wilcox.test')
 
-knitr::kable(tst2, caption = '\\label{table:table15} Wilcoxon test summary')
+knitr::kable(tst2,
+             caption = '\\label{table:table15} Wilcoxon test summary')
 ```
 
 When the argument `test` is set to 'wilcox.test', Wilcoxon test method is used instead and similar output is provided (Table \ref{table:table15}).  
@@ -746,7 +753,8 @@ tst3 <- pcr_test(ct4,
          reference_group = 'control',
          test = 'lm')
 
-knitr::kable(tst3, caption = '\\label{table:table16} Linear regression summary')
+knitr::kable(tst3,
+             caption = '\\label{table:table16} Linear regression summary')
 ```
 
 The output of the `test`, 'lm' contains an extra column `term` to show the different comparison terms used to calculate the results (Table \ref{table:table16}).  
@@ -775,7 +783,8 @@ res <- pcr_test(ct4,
                 model_matrix = mm,
                 test = 'lm')
 
-knitr::kable(res, caption = "\\label{table:table17} Testing advanced hypotheses")
+knitr::kable(res,
+             caption = "\\label{table:table17} Testing advanced hypotheses")
 ```
 
 In this case, the `estimate` effect of the interaction term between `dose` and `group` is very samll and the `p_value` is very large (Table \ref{table:table17}).  
@@ -798,7 +807,8 @@ res <- pcr_test(ct4,
                 model_matrix = mm,
                 test = 'lm')
 
-knitr::kable(res, caption = "\\label{table:table18} Check the effect of varying RNA quality")
+knitr::kable(res,
+             caption = "\\label{table:table18} Check the effect of varying RNA quality")
 ```
 
 The randomly generated `quality` seems to infuluence the results as indicated by the big `estimate` for the term 'model_matrixgroupcontrol:quality' and its `p_value` (Table \ref{table:table18}).  
@@ -820,7 +830,8 @@ res <- pcr_test(ct4,
                 model_matrix = mm,
                 test = 'lm')
 
-knitr::kable(res, caption = "\\label{table:table19} Combining data from multiple qPCR runs")
+knitr::kable(res,
+             caption = "\\label{table:table19} Combining data from multiple qPCR runs")
 ```
 
 Here, we contructed a variable `run` to similate a situation in which a dataset was generated in three separate runs. By including `run` in a `model_matrix`, its effect can be estimated. In this case, the `estimate` are very samll and the `p_value` are very large, so it can be igored (Table \ref{table:table19}).  
